@@ -1,3 +1,7 @@
+Wed,  6 Dec 2006 02:59:10 +0100 <thp@perli.net>
+        * src/gpodder/libgpodder.py: Add support for updating 
+          symlink on Desktop when moving downloads folder
+
 Wed,  6 Dec 2006 02:45:43 +0100 <thp@perli.net>
         * TODO: Remove items on TODO list that have been done now
 
